# mazer

./: Cargo.toml  Dockerfile  README.md  index.html  justfile
chart/mazer/: Chart.yaml  values.yaml
chart/mazer/templates/: deployment.yaml  ingres.yaml  service.yaml
src/: edge.rs  error.rs  lib.rs  main.rs  node.rs  render.rs  space.rs  space_meta.rs  space_square.rs
src/graph/: automation.rs  edge.rs  graph.rs  mod.rs  space.rs
src/render/: mod.rs
src/server/: mazeparams.rs  mod.rs
