[package]
name = "mazer"
version = "2.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
colog = { version = "1.4.0", optional=true }
console_error_panic_hook = { version = "0.1.7", optional=true }
getrandom = { version = "0.3.4", features = ["wasm_js"], optional=true }
gloo = { version = "0.11.0", optional = true, features = ["console"] }
log = "0.4.29"
rand = "0.9.2"
rand_chacha = "^0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
svg = "0.18.0"
thiserror = "2.0.18"
wasm-bindgen = { version = "0.2.108", features = ["serde", "serde_json"] , optional = true }

[dev-dependencies]
colog = "1.4.0"
log4rs_test_utils = "0.2.3"

[features]

default = ["wasm"]
wasm = ["dep:gloo", "dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook", "dep:getrandom"]
server = ["dep:colog"]
